--- a/HTML/index.html
+++ b/HTML/index.html
@@ -52,6 +52,11 @@
     #################################################################$$$$$$$$$$  $$$$$$$$$$
     -->
     <header class="header--disp--ptn header--bg main--header">
+      <img
+        src="../Images/gkg--wordless-300x364.png"
+        alt="Gold Key Group logo"
+        class="GKG--logo"
+      />
       <h1 class="text--shadow" id="header--title">
         GOLD <br />
         KEY <br />
@@ -69,7 +74,7 @@
         id="header--img"
         class="bs"
       />
-      <p class="slogan">The gold key to your dream home.</p>
+      <p class="slogan">The key to your dream home.</p>
       <p id="header--text">
         The house of your dreams is in Central Florida, and we'll help you find
         it!
@@ -581,17 +586,9 @@
     #################################################################$$$$$$$$$$  $$$$$$$$$$
     -->
     <footer>
-      <!-- <h2 class="footer__gkg text__shadow">
-        GOLD 
-        <br />
-        KEY 
-        <br />
-        GROUP
-      </h2>
-      <img src="../Images/gkg--wordless-300x364.png" alt="Gold Key Group logo" class="footer__img"> -->
-      <div class="footer__grid">
+      <div class="footer__flex">
         <h2>You can always reach us here:</h2>
-        <div id="footer__addresses">
+        <div class="footer__addresses">
           <div class="footer--card">
             <h3>Maria Zendejas</h3>
             <address>
