--- a/HTML/test.html
+++ b/HTML/test.html
@@ -436,11 +436,11 @@
       GROUP
     </h2>
     <img src="../Images/gkg--wordless-300x364.png" alt="Gold Key Group logo" class="footer__img">
-    <div class="footer__grid">
+    <div class="footer__flex">
       <h2>
         You can always reach us here:
       </h2>
-      <div id="footer__addresses">
+      <div class="footer__addresses">
         <div class="footer__maria">
           <h3>
             Maria Zendejas
