changed header and queries

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -52,11 +52,6 @@
     #################################################################$$$$$$$$$$  $$$$$$$$$$
     -->
     <header class="header--disp--ptn header--bg main--header">
-      <img
-        src="../Images/gkg--wordless-300x364.png"
-        alt="Gold Key Group logo"
-        class="GKG--logo"
-      />
       <h1 class="text--shadow" id="header--title">
         GOLD <br />
         KEY <br />
@@ -69,10 +64,9 @@
         </p>
       </div> -->
       <img
-        src="../Images/maria-z--and--paula-c.jpg"
-        alt="Our two realtors"
+        src="../Images/gkg--wordless-300x364.png"
+        alt="Gold Key Group logo"
         id="header--img"
-        class="bs"
       />
       <p class="slogan">The key to your dream home.</p>
       <p id="header--text">
@@ -167,13 +161,18 @@
       <section class="screen" id="welcome--section">
         <div class="content">
           <h2 class="section--title gkg text--shadow">Welcome</h2>
+          <img
+            src="../Images/maria-z--and--paula-c.jpg"
+            alt="Our two agents"
+            class="bs"
+            id="welcome--img"
+          />
           <p>We are here to help you find the house of your dreams!</p>
           <div class="welcome--container">
             <p>
               But if that's not what you're looking for, we can also help you
               invest in real estate or sell it!
-            </p>
-            <p>
+              <br /><br />
               <!-- We provide the following services: 
               <br>
               -Sell your property for a good market price.
