added queries and logo to header

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Gold Key Group's realtors will guide you in the process of buying a house, assist you selling your property, or give you advise on how to invest in Orlando's real estate.
       Contact us for a free consultation!
-      Maria: (407)-913-0154 - Paula: (407)-668-9070"
+      Maria: (407) 913-0154 - Paula: (407) 668-9070"
     />
     <meta
       name="keywords"
@@ -30,19 +30,20 @@
 
   <body class="main--body">
     <div id="upper--nav">
-      <em
-        ><a href="#ESP" title="Click to translate" style="padding: 0.2em"
-          >Hablamos Español</a
-        >
-      </em>
+      <!-- <em>
+        <a href="#ESP" title="Click to translate" style="padding: 0.2em">
+          Hablamos Español
+        </a>
+      </em> -->
+      <span>Hablamos Español</span>
       <address id="upper--nav--phones">
         <span>
           Maria Zendejas:
-          <a href="tel:407-913-0154" title="Call Maria"> (407)-913-0154 </a>
+          <a href="tel:407-913-0154" title="Call Maria"> (407) 913-0154 </a>
         </span>
         <span>
           Paula Correa:
-          <a href="tel:407-668-9070" title="Call Paula"> (407)-668-9070 </a>
+          <a href="tel:407-668-9070" title="Call Paula"> (407) 668-9070 </a>
         </span>
       </address>
     </div>
@@ -130,17 +131,10 @@
             </a>
           </li> -->
           <li>
-            <a href="/HTML/search.html" target="_blank" class="big--cta">
-              BUY
-            </a>
+            <a href="/HTML/search.html" class="big--cta"> BUY </a>
           </li>
           <li>
-            <a
-              href="/HTML/sell.html"
-              id="sell--home"
-              target="_blank"
-              class="big--cta"
-            >
+            <a href="/HTML/sell.html" id="sell--home" class="big--cta">
               SELL
             </a>
           </li>
@@ -200,13 +194,13 @@
               <img src="../Images/mz.png" alt="Maria Zendejas" class="bs" />
               <h3 class="gkg text--shadow">Maria Zendejas</h3>
               <address>
-                Cellphone:
+                Phone:
                 <br />
                 <a href="tel:407-913-0154" title="Call Maria" class="bio--svg">
                   <svg class="fas fa-phone"></svg>
                 </a>
                 <a href="tel:407-913-0154" title="Call Maria" class="bio--a">
-                  (407)-913-0154
+                  (407) 913-0154
                 </a>
                 <br />
                 <br />
@@ -228,7 +222,6 @@
                 >
                   mariazendejasrealestate@gmail.com
                 </a>
-                <br />
                 <br />
                 License number:
                 <br />
@@ -258,13 +251,13 @@
               />
               <h3 class="gkg text--shadow">Paula Correa</h3>
               <address>
-                Cellphone:
+                Phone:
                 <br />
                 <a href="tel:407-668-9070" title="Call Paula" class="bio--svg">
                   <svg class="fas fa-phone"></svg>
                 </a>
                 <a href="tel:407-668-9070" title="Call Paula" class="bio--a">
-                  (407)-668-9070
+                  (407) 668-9070
                 </a>
                 <br />
                 <br />
@@ -406,14 +399,15 @@
               We are going to call you on the date and time you select bellow.
               <br />
               <br />
-              Please fill the marked(<span style="color: red">*</span>) fields.
+              Please fill the marked(<span style="color: #5a473c">*</span>)
+              fields.
             </p>
             <div class="form--data">
               <!--  FIRST COLUMN START -->
               <div class="form--col">
                 <!-- ### NAME ### -->
                 <label for="name">
-                  Name <span style="color: red">*</span> :
+                  Name <span style="color: #5a473c">*</span>
                 </label>
                 <br />
                 <input
@@ -427,28 +421,28 @@
                 <br />
                 <!-- ### PHONE NUMBER ### -->
                 <label for="phone">
-                  Phone <span style="color: red">*</span> :
+                  Phone <span style="color: #5a473c">*</span>
                 </label>
                 <br />
                 <input
                   type="tel"
                   name="phone"
                   id="phone"
-                  placeholder="(111)-222-3333"
+                  placeholder="(111) 222-3333"
                   required
                 />
                 <br />
                 <br />
                 <!-- ### E-MAIL ### -->
                 <label for="email">
-                  E-mail <span style="color: red">*</span> :
+                  E-mail <span style="color: #5a473c">*</span>
                 </label>
                 <br />
                 <input
                   type="email"
                   name="email"
                   id="email"
-                  placeholder="eamil@example.com"
+                  placeholder="email@example.com"
                   required
                 />
                 <br />
@@ -458,7 +452,7 @@
               <div class="form--col">
                 <!-- ### DATE ### -->
                 <label for="date">
-                  Select a date <span style="color: red">*</span> :
+                  Select a date <span style="color: #5a473c">*</span>
                 </label>
                 <br />
                 <span class="datepicker-format">
@@ -477,7 +471,7 @@
                 <br />
                 <!-- ### TIME ### -->
                 <div class="form--time">
-                  <label for="time"> Best time to call: </label>
+                  <label for="time"> Best time to call </label>
                   <br />
                   <input
                     type="radio"
@@ -525,7 +519,7 @@
               <!-- THIRD COLUMN START -->
               <div class="form--col">
                 <!-- ### MESSAGE ### -->
-                <label for="message"> Include a message (optional): </label>
+                <label for="message"> Include a message (optional) </label>
                 <br />
                 <br />
                 <textarea
@@ -591,8 +585,8 @@
           <div class="footer--card">
             <h3>Maria Zendejas</h3>
             <address>
-              <span> Cellphone: </span>
-              <a href="tel:407-913-0154" title="Call Maria"> (407)-913-0154 </a>
+              <span> Phone: </span>
+              <a href="tel:407-913-0154" title="Call Maria"> (407) 913-0154 </a>
               <span> E-mail: </span>
               <a
                 href="mailto:mariazendejas@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello%2C%20Maria%2C%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0AI'd%20like%20to%20(%20BUY%20%2F%20SELL%20)%20a%20house%20on%20ZIP%20code%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
@@ -627,8 +621,8 @@
           <div class="footer--card">
             <h3>Paula Correa</h3>
             <address>
-              <span> Cellphone: </span>
-              <a href="tel:407-668-9070" title="Call Paula"> (407)-668-9070 </a>
+              <span> Phone: </span>
+              <a href="tel:407-668-9070" title="Call Paula"> (407) 668-9070 </a>
               <span> E-mail: </span>
               <a
                 href="mailto:paulacorreare@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello%2C%20Paula%2C%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0AI'd%20like%20to%20(%20BUY%20%2F%20SELL%20)%20a%20house%20on%20ZIP%20code%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
@@ -668,13 +662,16 @@
           </li>
           <li>
             <svg class="fab fa-facebook-square"></svg>
-            <a href="https://www.facebook.com/goldkeyorlando/">
-              fabook.com/goldkeyorlando
+            <a href="https://www.facebook.com/goldkeyorlando/" target="_blank">
+              facebook.com/goldkeyorlando
             </a>
           </li>
           <li>
             <svg class="fab fa-instagram"></svg>
-            <a href="https://www.instagram.com/goldkey_orlando/">
+            <a
+              href="https://www.instagram.com/goldkey_orlando/"
+              target="_blank"
+            >
               instagram.com/goldkey_orlando
             </a>
           </li>
