--- a/HTML/search.html
+++ b/HTML/search.html
@@ -54,6 +54,11 @@
         YOUR <br />
         DREAM HOME
       </h1>
+      <img
+        src="../Images/gkg--wordless-300x364.png"
+        alt="Gold Key Group Logo"
+        class="header--logo--alt"
+      />
       <p id="header--text">
         We'll make sure you find that dream home!
         <br /><br />
