--- a/HTML/sell.html
+++ b/HTML/sell.html
@@ -54,10 +54,15 @@
         YOUR <br />
         PROPERTY
       </h1>
+      <img
+        src="../Images/gkg--wordless-300x364.png"
+        alt="Gold Key Group Logo"
+        class="header--logo--alt"
+      />
       <p id="header--text">
         We can help you sell that property!
         <br /><br />
-        But first, we need to know you. So please fill up the form bellow!
+        But first, we need to know you. So please fill up the form bellow.
       </p>
       <div class="header--icons">
         <a
