latest changes cuchau

--- a/HTML/search.html
+++ b/HTML/search.html
@@ -14,7 +14,7 @@
       content="buy house, sell house, buy home, sell home, orlando, florida, realtor, realty, stellar mls, revolution realty, new construction, windermere, winter garden, florida home investment"
     />
 
-    <title>Gold Key Group | Realtors in Orlando</title>
+    <title>Gold Key Group | Find the house of your dreams</title>
 
     <link rel="stylesheet" href="../CSS/main/main.css" />
     <link rel="shortcut icon" type="image/ico" href="../Images/favicon.ico" />
@@ -261,7 +261,7 @@
         <h3 style="margin: 0.5em auto; font-size: 4em">Gold Key Group</h3>
         <ul class="footer--gkg--sm">
           <li>
-            <span> Contact us on our social media: </span>
+            <span>Contact us on our social media: </span>
           </li>
           <li>
             <svg class="fab fa-facebook-square"></svg>
