--- a/HTML/sell.html
+++ b/HTML/sell.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Gold Key Group's realtors will guide you in the process of buying a house, assist you selling your property, or give you advise on how to invest in Orlando's real estate.
+      content="Gold Key Group's realtors will guide you in the process of selling a house, as well as provide you with tools to sell that house as soon as possible.
       Contact us for a free consultation!
       Maria: (407)-913-0154 - Paula: (407)-668-9070"
     />
     <meta
       name="keywords"
-      content="buy house, sell house, buy home, sell home, orlando, florida, realtor, realty, stellar mls, revolution realty, new construction, windermere, winter garden, florida home investment"
+      content="sell house, sell home, central florida, orlando, florida"
     />
 
-    <title>Gold Key Group | Realtors in Orlando</title>
+    <title>Gold Key Group | We can help you sell that house!</title>
 
     <link rel="stylesheet" href="../CSS/main/main.css" />
     <link rel="shortcut icon" type="image/ico" href="../Images/favicon.ico" />
