adding all files for no PHP page on GKG

--- a/search.html
+++ b/search.html
@@ -16,8 +16,8 @@
 
     <title>Gold Key Group | Find the house of your dreams</title>
 
-    <link rel="stylesheet" href="../CSS/main/main.css" />
-    <link rel="shortcut icon" type="image/ico" href="../Images/favicon.ico" />
+    <link rel="stylesheet" href="./CSS/main/main.css" />
+    <link rel="shortcut icon" type="image/ico" href="./Images/favicon.ico" />
 
     <script
       src="https://kit.fontawesome.com/76fa9a81bb.js"
@@ -43,39 +43,41 @@
         </span>
       </address>
     </div>
-    <!-- 
-    #################################################################$$$$$$$$$$  $$$$$$$$$$
-              HEADER START          #################################$$$$$$$$$$  $$$$$$$$$$
-    #################################################################$$$$$$$$$$  $$$$$$$$$$
-    -->
+
     <header class="header--disp--ptn header--bg header--buy">
       <h1 class="text--shadow" id="header--title">
-        BUY <br />
+        FIND <br />
         YOUR <br />
         DREAM HOME
       </h1>
       <img
-        src="../Images/gkg--wordless-300x364.png"
+        src="./Images/gkg--wordless-300x364.png"
         alt="Gold Key Group Logo"
         class="header--logo--alt"
       />
       <p id="header--text">
-        We'll make sure you find that dream home!
-        <br /><br />
-        Follow the instructions bellow to search for houses in your desired
-        area!
+        We have all the tools needed to help you find the home you've always
+        dreamed of.
       </p>
       <div class="header--icons">
         <a
-          href="mailto:mariazendejas@gmail.com, paulacorreare@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello!%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0AI'd%20like%20to%20(%20BUY%20%2F%20SELL%20)%20a%20house%20on%20ZIP%20code%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
+          href="mailto:mariazendejas@gmail.com, paulacorreare@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello!%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0A%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
           target="_blank"
         >
           <svg class="fas fa-envelope"></svg>
         </a>
-        <a href="https://www.facebook.com/goldkeyorlando/" target="_blank">
+        <a
+          href="https://www.facebook.com/goldkeyorlando/"
+          target="_blank"
+          target="_blank"
+        >
           <svg class="fab fa-facebook-square"></svg>
         </a>
-        <a href="https://www.instagram.com/goldkey_orlando/" target="_blank">
+        <a
+          href="https://www.instagram.com/goldkey_orlando/"
+          target="_blank"
+          target="_blank"
+        >
           <svg class="fab fa-instagram"></svg>
         </a>
       </div>
@@ -85,21 +87,12 @@
       </div>
 
       <img
-        src="../Images/rr-logo.png"
+        src="./Images/rr-logo.png"
         alt="Revolution Realty"
         class="rr--logo bs"
       />
     </header>
-    <!-- 
-    #################################                                            $$$$$$$$$$
-              HEADER END                                                         $$$$$$$$$$
-    #################################                                            $$$$$$$$$$
-    -->
-    <!-- 
-    #################################################################$$$$$$$$$$  $$$$$$$$$$
-              TOP NAV START         #################################$$$$$$$$$$  $$$$$$$$$$
-    #################################################################$$$$$$$$$$  $$$$$$$$$$
-    -->
+
     <div id="top--nav">
       <nav id="main--nav">
         <h2 class="gkg">
@@ -115,25 +108,15 @@
             <a href="#search" class="big--cta"> BUY </a>
           </li>
           <li>
-            <a href="/HTML/sell.html" id="sell--home" class="big--cta">
-              SELL
-            </a>
+            <a href="./sell.html" id="sell--home" class="big--cta"> SELL </a>
           </li>
         </ul>
       </nav>
     </div>
-    <!-- 
-    #################################                                            $$$$$$$$$$
-              TOP NAV END                                                        $$$$$$$$$$
-    #################################                                            $$$$$$$$$$
-    -->
-    <!-- 
-    #################################################################$$$$$$$$$$  $$$$$$$$$$
-              MAIN START            #################################$$$$$$$$$$  $$$$$$$$$$
-    #################################################################$$$$$$$$$$  $$$$$$$$$$
-    -->
+
     <main>
       <!-- section.screen>.content>h2.text--shadow.section--title+p. -->
+      section.screen#
 
       <section class="screen" id="IDX--section">
         <div class="content">
@@ -142,13 +125,13 @@
             Please select the specifications of the propperty you're looking for
             down below:
             <br /><br />
-            If you're having trouble finding something,
+            If you have trouble finding something,
             <a href="./index.html#contact">contact us</a>, we'll help you out!
           </p>
           <!-- IDX DIV .mls--search -->
           <div
             class="mls--search"
-            style="width: 100%; height: 100vh; margin: 3rem 0"
+            style="width: 100%; height: 100%; margin: 3rem 0"
           >
             <iframe
               src="https://stellar.mlsmatrix.com/Matrix/public/IDX.aspx?idx=e3175684"
@@ -181,7 +164,7 @@
         <br />
         GROUP
       </h2>
-      <img src="../Images/gkg--wordless-300x364.png" alt="Gold Key Group logo" class="footer__img"> -->
+      <img src="./Images/gkg--wordless-300x364.png" alt="Gold Key Group logo" class="footer__img"> -->
       <div class="footer__flex">
         <h2>You can always reach us here:</h2>
         <div class="footer__addresses">
@@ -192,7 +175,7 @@
               <a href="tel:407-913-0154" title="Call Maria"> (407)-913-0154 </a>
               <span> E-mail: </span>
               <a
-                href="mailto:mariazendejas@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello%2C%20Maria%2C%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0AI'd%20like%20to%20(%20BUY%20%2F%20SELL%20)%20a%20house%20on%20ZIP%20code%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
+                href="mailto:mariazendejas@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello%2C%20Maria%2C%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0A%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
                 target="_blank"
                 title="Send an e-mail to Maria"
               >
@@ -202,7 +185,9 @@
               <ul>
                 <li>
                   <svg class="fab fa-facebook-square"></svg>
-                  <a href="https://www.facebook.com/mariazendejasrealtor/"
+                  <a
+                    href="https://www.facebook.com/mariazendejasrealtor/"
+                    target="_blank"
                     >Facebook</a
                   >
                 </li>
@@ -214,6 +199,7 @@
                   <svg class="fab fa-whatsapp"></svg>
                   <a
                     href="https://wa.me/14079130154"
+                    target="_blank"
                     title="Send me a message on Whatsapp"
                     >Whatsapp</a
                   >
@@ -228,7 +214,7 @@
               <a href="tel:407-668-9070" title="Call Paula"> (407)-668-9070 </a>
               <span> E-mail: </span>
               <a
-                href="mailto:paulacorreare@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello%2C%20Paula%2C%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0AI'd%20like%20to%20(%20BUY%20%2F%20SELL%20)%20a%20house%20on%20ZIP%20code%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
+                href="mailto:paulacorreare@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello%2C%20Paula%2C%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0A%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
                 target="_blank"
                 title="Send an e-mail to Paula"
               >
@@ -238,7 +224,9 @@
               <ul>
                 <li>
                   <svg class="fab fa-facebook-square"></svg>
-                  <a href="https://www.facebook.com/paulacorrearealtor/"
+                  <a
+                    href="https://www.facebook.com/paulacorrearealtor/"
+                    target="_blank"
                     >Facebook</a
                   >
                 </li>
@@ -250,6 +238,7 @@
                   <svg class="fab fa-whatsapp"></svg>
                   <a
                     href="https://wa.me/14076689070"
+                    target="_blank"
                     title="Send me a message on Whatsapp"
                     >Whatsapp</a
                   >
@@ -265,13 +254,16 @@
           </li>
           <li>
             <svg class="fab fa-facebook-square"></svg>
-            <a href="https://www.facebook.com/goldkeyorlando/">
+            <a href="https://www.facebook.com/goldkeyorlando/" target="_blank">
               fabook.com/goldkeyorlando
             </a>
           </li>
           <li>
             <svg class="fab fa-instagram"></svg>
-            <a href="https://www.instagram.com/goldkey_orlando/">
+            <a
+              href="https://www.instagram.com/goldkey_orlando/"
+              target="_blank"
+            >
               instagram.com/goldkey_orlando
             </a>
           </li>
@@ -292,8 +284,8 @@
           AM
         </p>
         <div class="footer__logos-rr-smls">
-          <img src="../Images/rr-logo.png" alt="Revolution Realty logo" />
-          <img src="../Images/StellarMLS.png" alt="Stellar MLS logo" />
+          <img src="./Images/rr-logo.png" alt="Revolution Realty logo" />
+          <img src="./Images/StellarMLS.png" alt="Stellar MLS logo" />
         </div>
       </div>
     </footer>
