--- a/sell.html
+++ b/sell.html
@@ -16,8 +16,8 @@
 
     <title>Gold Key Group | We can help you sell that house!</title>
 
-    <link rel="stylesheet" href="../CSS/main/main.css" />
-    <link rel="shortcut icon" type="image/ico" href="../Images/favicon.ico" />
+    <link rel="stylesheet" href="./CSS/main/main.css" />
+    <link rel="shortcut icon" type="image/ico" href="./Images/favicon.ico" />
 
     <script
       src="https://kit.fontawesome.com/76fa9a81bb.js"
@@ -55,7 +55,7 @@
         PROPERTY
       </h1>
       <img
-        src="../Images/gkg--wordless-300x364.png"
+        src="./Images/gkg--wordless-300x364.png"
         alt="Gold Key Group Logo"
         class="header--logo--alt"
       />
@@ -66,15 +66,23 @@
       </p>
       <div class="header--icons">
         <a
-          href="mailto:mariazendejas@gmail.com, paulacorreare@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello!%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0AI'd%20like%20to%20(%20BUY%20%2F%20SELL%20)%20a%20house%20on%20ZIP%20code%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
+          href="mailto:mariazendejas@gmail.com, paulacorreare@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello!%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
           target="_blank"
         >
           <svg class="fas fa-envelope"></svg>
         </a>
-        <a href="https://www.facebook.com/goldkeyorlando/" target="_blank">
+        <a
+          href="https://www.facebook.com/goldkeyorlando/"
+          target="_blank"
+          target="_blank"
+        >
           <svg class="fab fa-facebook-square"></svg>
         </a>
-        <a href="https://www.instagram.com/goldkey_orlando/" target="_blank">
+        <a
+          href="https://www.instagram.com/goldkey_orlando/"
+          target="_blank"
+          target="_blank"
+        >
           <svg class="fab fa-instagram"></svg>
         </a>
       </div>
@@ -84,7 +92,7 @@
       </div>
 
       <img
-        src="../Images/rr-logo.png"
+        src="./Images/rr-logo.png"
         alt="Revolution Realty"
         class="rr--logo bs"
       />
@@ -166,7 +174,7 @@
               <div class="form--col">
                 <!-- ### NAME ### -->
                 <label for="name">
-                  Name <span style="color: red">*</span> :
+                  Name <span style="color: #5a473c">*</span>
                 </label>
                 <br />
                 <input
@@ -180,7 +188,7 @@
                 <br />
                 <!-- ### PHONE NUMBER ### -->
                 <label for="phone">
-                  Phone <span style="color: red">*</span> :
+                  Phone <span style="color: #5a473c">*</span>
                 </label>
                 <br />
                 <input
@@ -194,7 +202,7 @@
                 <br />
                 <!-- ### E-MAIL ### -->
                 <label for="email">
-                  E-mail <span style="color: red">*</span> :
+                  E-mail <span style="color: #5a473c">*</span>
                 </label>
                 <br />
                 <input
@@ -211,7 +219,7 @@
               <div class="form--col">
                 <!-- ### DATE ### -->
                 <label for="date">
-                  Select a date <span style="color: red">*</span> :
+                  Select a date <span style="color: #5a473c">*</span>
                 </label>
                 <br />
                 <span class="datepicker-format">
@@ -230,7 +238,7 @@
                 <br />
                 <!-- ### TIME ### -->
                 <div class="form--time">
-                  <label for="time"> Best time to call: </label>
+                  <label for="time"> Best time to call </label>
                   <br />
                   <input
                     type="radio"
@@ -278,7 +286,7 @@
               <!-- THIRD COLUMN START -->
               <div class="form--col">
                 <!-- ### MESSAGE ### -->
-                <label for="message"> Include a message (optional): </label>
+                <label for="message"> Include a message (optional) </label>
                 <br />
                 <br />
                 <textarea
@@ -294,6 +302,10 @@
               </div>
               <!-- THIRD COLUMN END -->
             </div>
+            <div
+              class="g-recaptcha"
+              data-sitekey="6LfBlcoZAAAAAJ0w9JMD4Tye281QJZyXmn4t55u3"
+            ></div>
 
             <input type="submit" id="submit" value="Submit" />
             <!-- FORM FOOTER START-->
@@ -330,7 +342,7 @@
         <br />
         GROUP
       </h2>
-      <img src="../Images/gkg--wordless-300x364.png" alt="Gold Key Group logo" class="footer__img"> -->
+      <img src="./Images/gkg--wordless-300x364.png" alt="Gold Key Group logo" class="footer__img"> -->
       <div class="footer__flex">
         <h2>You can always reach us here:</h2>
         <div class="footer__addresses">
@@ -341,7 +353,7 @@
               <a href="tel:407-913-0154" title="Call Maria"> (407)-913-0154 </a>
               <span> E-mail: </span>
               <a
-                href="mailto:mariazendejas@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello%2C%20Maria%2C%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0AI'd%20like%20to%20(%20BUY%20%2F%20SELL%20)%20a%20house%20on%20ZIP%20code%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
+                href="mailto:mariazendejas@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello%2C%20Maria%2C%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
                 target="_blank"
                 title="Send an e-mail to Maria"
               >
@@ -351,7 +363,9 @@
               <ul>
                 <li>
                   <svg class="fab fa-facebook-square"></svg>
-                  <a href="https://www.facebook.com/mariazendejasrealtor/"
+                  <a
+                    href="https://www.facebook.com/mariazendejasrealtor/"
+                    target="_blank"
                     >Facebook</a
                   >
                 </li>
@@ -363,6 +377,7 @@
                   <svg class="fab fa-whatsapp"></svg>
                   <a
                     href="https://wa.me/14079130154"
+                    target="_blank"
                     title="Send me a message on Whatsapp"
                     >Whatsapp</a
                   >
@@ -377,7 +392,7 @@
               <a href="tel:407-668-9070" title="Call Paula"> (407)-668-9070 </a>
               <span> E-mail: </span>
               <a
-                href="mailto:paulacorreare@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello%2C%20Paula%2C%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0AI'd%20like%20to%20(%20BUY%20%2F%20SELL%20)%20a%20house%20on%20ZIP%20code%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
+                href="mailto:paulacorreare@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello%2C%20Paula%2C%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
                 target="_blank"
                 title="Send an e-mail to Paula"
               >
@@ -387,7 +402,9 @@
               <ul>
                 <li>
                   <svg class="fab fa-facebook-square"></svg>
-                  <a href="https://www.facebook.com/paulacorrearealtor/"
+                  <a
+                    href="https://www.facebook.com/paulacorrearealtor/"
+                    target="_blank"
                     >Facebook</a
                   >
                 </li>
@@ -399,6 +416,7 @@
                   <svg class="fab fa-whatsapp"></svg>
                   <a
                     href="https://wa.me/14076689070"
+                    target="_blank"
                     title="Send me a message on Whatsapp"
                     >Whatsapp</a
                   >
@@ -414,13 +432,16 @@
           </li>
           <li>
             <svg class="fab fa-facebook-square"></svg>
-            <a href="https://www.facebook.com/goldkeyorlando/">
+            <a href="https://www.facebook.com/goldkeyorlando/" target="_blank">
               fabook.com/goldkeyorlando
             </a>
           </li>
           <li>
             <svg class="fab fa-instagram"></svg>
-            <a href="https://www.instagram.com/goldkey_orlando/">
+            <a
+              href="https://www.instagram.com/goldkey_orlando/"
+              target="_blank"
+            >
               instagram.com/goldkey_orlando
             </a>
           </li>
@@ -441,8 +462,8 @@
           AM
         </p>
         <div class="footer__logos-rr-smls">
-          <img src="../Images/rr-logo.png" alt="Revolution Realty logo" />
-          <img src="../Images/StellarMLS.png" alt="Stellar MLS logo" />
+          <img src="./Images/rr-logo.png" alt="Revolution Realty logo" />
+          <img src="./Images/StellarMLS.png" alt="Stellar MLS logo" />
         </div>
       </div>
     </footer>
